alignment corrections

--- a/homework5-2021/css/style.css
+++ b/homework5-2021/css/style.css
@@ -131,9 +131,8 @@ header{
 /*Req 8a, 8b, and 8c*/
 .about-image, .method-image, .client-image, .contact-image{
   /*Your Code Here*/
-  grid-column: 1 / span all;
+  grid-column: 1 / -1;
   max-height: 650px;
-  max-width: 100%;
   overflow: hidden;
 }
 
@@ -168,7 +167,7 @@ header{
   padding: 30px;
 
   /*Your code here:*/
-  align-items: center;
+  align-self: center;
 }
 
 
